# ScreenLock

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  screenlock.cpp  screenlock.h
theme/: style.css
